# mcm

./: README.md  pyproject.toml
mcm/: __init__.py  backend.py  browser.py  build.py  cache.py  cliutils.py  common.py  config.py  curseforge.py  infomanager.py  mcdata.py  modconfs.py  modinfo.py  modpakyml.py  modrinth.py  precedence.py  purkka.py  recipematch.py  resolve.py  search.py  serialize.py  utils.py
